# quackamollie

./: .bumpversion.toml  .coveragerc  .dockerignore  .gitchangelog.rc  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  VERSION  docker-compose.gpu.yml  docker-compose.localhost.yml  docker-compose.open-webui.yml  docker-compose.yml  pyproject.toml  pytest.ini  tox.ini
config/examples/: config.yml  config_with_logging.yml
docs/install/: install_full_docker.rst  install_ollama_locally.rst
scripts/ci/: ssh-add-pass
scripts/ollama/: ollama_entrypoint.sh
src/quackamollie/_bundle/: __init__.py
tests/_bundle/: test_quackamollie_bundle.py
